Nav bar on smaller finally fixeedd
Thank u miss simmond for help me alot. I lowky happy. TQSMMMMMM

--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@
     color: white;
     cursor: pointer;
     position: sticky;
+    background-color: rgba(171, 164, 164, 0.206);
+        backdrop-filter: blur(10px);
+        box-shadow: -10px 0 10px rgba(0, 0, 0, 0.15);
 }
 
 #theme-toggle i:last-child {
@@ -214,6 +217,10 @@ nav ul li a:hover::after,
 
     #theme-toggle {
         padding: 9px 0px;
+                margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .logo{
@@ -1498,3 +1505,80 @@ p {
     padding: 100px 100px;
   }
 }
+
+.my-button {
+    background-color: transparent;
+    border: 10px;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    font-size: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+    float: left;
+    line-height: 30px;
+    display: none;
+  }
+  
+  .my-button:focus {
+    outline: none;
+  }
+  
+  nav {
+      background-color: transparent;
+      flex-wrap: wrap;
+  }
+  
+  nav ul {
+      display: flex;
+      justify-content: center;
+      list-style: none
+  }
+  
+  nav ul li {
+      padding: 20px 20px;
+  }
+  
+  nav ul li a {
+      color: white;
+      text-decoration: none;
+  }
+  
+  
+  
+  @media (max-width: 800px) {
+    nav ul {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+    }
+    
+    nav ul.show {
+      display: flex;
+    }
+    
+    .my-button {
+      display: block;
+    }
+  }
+  
+  @media (max-width: 600px) {
+      nav ul {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+    }
+    
+    nav ul.show {
+      display: flex;
+    }
+    
+    .my-button {
+      display: block;
+    }
+      nav {
+        background-color: rgba(171, 164, 164, 0.206);
+        backdrop-filter: blur(10px);
+        box-shadow: -10px 0 10px rgba(0, 0, 0, 0.15);
+      }
+  }
+  
